--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <script src="main.js"></script>
     <title>DHBW PWA Tutorial</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="manifest" href="manifest.json">
